--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,30 @@
 {
-        "name": "ckeditor-papageno",
-        "description": "JavaScript WYSIWYG web text editor.",
-        "keywords": [ "ckeditor", "fckeditor", "editor", "wysiwyg", "html", "richtext", "text", "javascript" ],
-        "authors": "CKSource (http://cksource.com/)",
-        "license": "For licensing, see LICENSE.md or http://ckeditor.com/license.",
-        "homepage": "http://ckeditor.com"
+  "name": "ckeditor-papageno",
+  "description": "JavaScript WYSIWYG web text editor.",
+  "keywords": [
+    "ckeditor",
+    "fckeditor",
+    "editor",
+    "wysiwyg",
+    "html",
+    "richtext",
+    "text",
+    "javascript"
+  ],
+  "authors": [
+    "CKSource (http://cksource.com/)"
+  ],
+  "license": "For licensing, see LICENSE.md or http://ckeditor.com/license.",
+  "homepage": "http://ckeditor.com",
+  "version": "0.0.0",
+  "moduleType": [
+    "globals"
+  ],
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "test",
+    "tests"
+  ]
 }
